# The-Octonionic-Rewrite

./: .gitignore  LICENSE  README.md  build.py  index.html  pyproject.toml
book/: MASTER_OUTLINE.md  PREFACE.md
book/appendices/: appA-octonion-multiplication-table.md  appB-g2-structure-constants.md  appC-computational-tools.md  appD-glossary.md  appE-comparison-table.md  appF-open-problems.md  appG-quick-start.md  appH-predictions-table.md  appI-rebuttal.md  (+1 more)
octonion_algebra/: __init__.py  __main__.py  alignment.py  applications.py  associator.py  axiom_verification.py  calculus.py  coherence.py  conservation.py  context_integral.py  copbw.py  core.py  deformation.py  demo.py  derivation_engine.py  fano_invariance.py  field_equations.py  finance.py  fluids.py  g2.py  g2_unification.py  interderivability.py  market_sim.py  predictions.py  simulator.py  systems.py  time_evolution.py  truncation.py
tests/: VERIFICATION_REPORT.md  conftest.py  test_3d_recovery.py  test_alignment.py  test_applications.py  test_associator.py  test_axiom_verification.py  test_calculus.py  test_coherence.py  test_conservation.py  test_context_integral.py  test_copbw.py  test_copbw_extended.py  test_core.py  test_deformation.py  test_derivation_engine.py  test_fano_invariance.py  test_field_equations.py  test_finance.py  test_fluids.py  test_g2.py  test_g2_unification.py  test_integration.py  test_interderivability.py  test_market_sim.py  test_predictions.py  test_predictions_extended.py  test_simulator.py  test_systems.py  test_time_evolution.py  test_truncation.py
(+42 files in other folders)
