[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octonion-algebra"
version = "0.1.0"
description = "Octonion algebra: non-associative mathematics with computational verification"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["octonion_algebra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
